// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clean up ID with ID specified 1`] = `
Array [
  Object {
    "from": Object {
      "id": "bot-x",
      "role": "bot",
    },
    "recipient": Object {
      "id": "user-x",
      "role": "user",
    },
  },
  Object {
    "from": Object {
      "id": "user-x",
      "role": "user",
    },
    "recipient": Object {
      "id": "bot-x",
      "role": "bot",
    },
  },
  Object {
    "from": Object {
      "id": "bot-x",
      "role": "bot",
    },
    "recipient": Object {
      "id": "user-x",
      "role": "user",
    },
  },
  Object {
    "from": Object {
      "id": "user-x",
      "role": "user",
    },
    "recipient": Object {
      "id": "bot-x",
      "role": "bot",
    },
  },
]
`;

exports[`clean up ID without specifying ID 1`] = `
Array [
  Object {
    "from": Object {
      "id": "bot-1",
      "role": "bot",
    },
    "recipient": Object {
      "id": "user-1",
      "role": "user",
    },
  },
  Object {
    "from": Object {
      "id": "user-1",
      "role": "user",
    },
    "recipient": Object {
      "id": "bot-1",
      "role": "bot",
    },
  },
  Object {
    "from": Object {
      "id": "bot-1",
      "role": "bot",
    },
    "recipient": Object {
      "id": "user-1",
      "role": "user",
    },
  },
  Object {
    "from": Object {
      "id": "user-1",
      "role": "user",
    },
    "recipient": Object {
      "id": "bot-1",
      "role": "bot",
    },
  },
]
`;
